@@ -17,6 +17,7 @@ tiberium-seed=Liquid Green Tiberium Seed Rocket
 tiberium-seed-blue=Liquid Blue Tiberium Seed Rocket
 tiberium-ion-core=Tiberium Ion Core
 tiberium-blue-explosives=Tiberium Explosives
+tiberium-cliff-explosives=Tiberium Parabolic Detonation Charge
 tiberium-rounds-magazine=Tiberium Rounds Magazine
 tiberium-nuke=Liquid Tiberium Bomb
 tiberium-artillery-shell=Tiberium Artillery Shell
@@ -45,6 +46,7 @@ tiberium-srf-emitter=Generates a directed Sonic Repulsion Field between horizont
 tiberium-spike=A self-powered extractor gathering ore directly from a Tiberium node and refining into molten Tiberium. Prevents the spiked node from growing Tiberium ore.
 tiberium-ion-core=A device for generating the ion streams for ion weapons.
 tiberium-blue-explosives=A form of Tiberium safe enough to handle, but explosive under the right conditions.
+tiberium-cliff-explosives=Throw the explosives in a parabolic arc towards a Tiberium Blossom Tree to detonate it and permanently destroy the vein, stopping future Tiberium growth.
 tiberium-rounds-magazine=A magazine of Tiberium infused bullets.
 tiberium-rocket=A missile with a small amount of liquid Tiberium as payload.
 tiberium-artillery-shell=This long range shell is packed with a little Tiberium surprise that will leave behind some Tiberium Ore on impact.
